Add PIPE mode support
#/bin/sh||-c||touch /tmp/pwned
#cmd.exe||/c||calc.exe